V1.0.9 Fix clicks on IOS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,14 +59,11 @@ body {
                 }
             }
 
-            &:hover + .dropdown-content,
-            &:active + .dropdown-content,
-            &:focus + .dropdown-content {
+            &:hover + .dropdown-content {
                 display: block;
             }
 
-            & + .dropdown-content:hover,
-            & + .dropdown-content:active {
+            & + .dropdown-content:hover {
                 display: block;
             }
         }
